# brewfs

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  BUCK  BUG_ANALYSIS_GENERIC_089.md  Cargo.toml  README.md  README_CN.md  agent.md  brewfs-sqlite.yml  build.rs  docker-compose.yml  plan.md
.github/workflows/: ci.yml  docker-images.yml  release.yml
benches/: brewfs_bench.rs
brewfs/: Cargo.toml
brewfs/doc/: review-object-store-cache.md  review-parallel-agents-summary.md  review-perf-harness-config.md  review-read-cache.md  review-writeback-writer.md  subagent-code-review-2026-06-10.md
brewfs/doc/superpowers/plans/: 2026-06-04-brewfs-juicefs-perf-gap-closure.md  2026-06-05-brewfs-juicefs-writeback-staging.md  2026-06-11-brewfs-console-phase1a.md  2026-06-11-brewfs-parallel-perf-tuning.md  2026-06-11-brewfs-randrw-slice-fragmentation.md
brewfs/doc/superpowers/specs/: 2026-06-11-brewfs-web-console-design.md
brewfs/docker/compose-xfstests/: Dockerfile  Dockerfile.juicefs-perf  Dockerfile.pjdfstest  docker-compose.pjdfstest-redis.yml  run_juicefs_perf.sh  run_juicefs_perf_in_container.sh  run_perf_in_container.sh  run_redis_perf.sh  run_redis_pjdfstest.sh  run_redis_stress_ng.sh
brewfs/docker/compose-xfstests/pjdfstest-brewfs/: path-errors-supported.t  rename-supported.t  unlink-supported.t  utimensat-supported.t
brewfs/src/: main.rs
brewfs/src/chunk/: reader.rs  writer.rs
brewfs/src/console/: api.rs  csi.rs  mod.rs  registry.rs  server.rs
brewfs/src/control/: protocol.rs  tests.rs
brewfs/src/fuse/: mod.rs
brewfs/src/meta/: store.rs
brewfs/src/meta/client/: cache.rs  mod.rs
brewfs/src/vfs/: error.rs  handles.rs  stats.rs
brewfs/src/vfs/fs/: mod.rs  tests.rs
brewfs/src/vfs/io/: reader.rs  writer.rs
brewfs/tools/perf/: compare_artifacts.py  test_compare_artifacts.sh
brewfs/tools/stats/src/: main.rs
brewfs/web/console/: index.html  package-lock.json  package.json
brewfs/web/console/src/: App.tsx  aclDraft.test.ts  aclDraft.ts  aclView.test.ts  aclView.ts  api.test.ts  api.ts  browserPath.test.ts  browserPath.ts  csiDashboard.test.ts  csiDashboard.ts  featureStatus.test.ts  featureStatus.ts  instanceDetails.test.ts  instanceDetails.ts  mountCommand.test.ts  mountCommand.ts  styles.css  trashView.test.ts  trashView.ts  volumeEdit.test.ts
doc/: README.md
doc/architecture/: README.md  arch.md  caching.md  chunk.md  compaction-gc.md  consistency.md  data-layout.md  link_symlink.md  meta.md  metadata.md  permissions.md  read-path.md  redis-version-cas.md  rename_design.md  write-path.md
doc/bugfix/: 504-flock.md  647-729-odirect-hole.md  735-fallocate-insert-range.md  736-readdir-while-renames.md  README.md  generic-013-014-sequence-hang.md  generic-074-debug-history.md  generic-438-fixes.md  rustfs-013-hang-analysis.md  write-path-stall-retrospective.md  write-path-stall-todo.md
doc/gap/: 00-overview.md  01-module-map.md  02-metadata-gap.md  03-data-cache-gap.md  04-vfs-fuse-posix-gap.md  05-ops-ecosystem-gap.md  06-roadmap.md  README.md
doc/juicefs/: 01-architecture.md  02-read-path.md  03-write-path.md  04-cache-system.md  05-transaction-engine.md  06-slice-compaction.md  07-performance-comparison.md  README.md  architecture.html  brewfs-vs-juicefs-full-comparison.md
doc/meta-api/: README.md  api-audit.md  api-extension-plan.md  readwrite-todo.md
doc/operations/: README.md  binary-deployment.md  configuration.md  control-plane.md  observability.md  profiling.md  sdk.md  stats-tool.md
doc/performance/: README.md  brewfs-vs-juicefs-analysis.md  perf-agent-metadata-cache.md  perf-optimization-roadmap.md  performance-roadmap.md  review-metadata-cache.md  review-object-store-cache.md  review-parallel-agents-summary.md  review-perf-harness-config.md  review-read-cache.md  review-writeback-writer.md  small-file-read-write-performance-optimization.md
doc/superpowers/: README.md
doc/testing/: README.md  bench.md  docker-compose-test-guide.md  file_lock_testing_guide.md  fuzz_testing_guide.md  xfstests-091-001-fix.md  xfstests-redis-rustfs-fix-plan.md
doc/vfs/: README.md  background.md  handles.md  inode.md  namespace.md  reader.md  vfs-overview.md  writer.md
docker/: BREWFS_LOCAL_MOUNT.md  Dockerfile  Dockerfile.runtime  README.md  build_brewfs_host_binary.sh  docker-compose.etcd.yml  docker-compose.integration.yml  docker-compose.redis.yml  docker-compose.sqlite.yml  entrypoint.sh  ltp_report.sh  run_integration_tests.sh  xfstests_report.sh
docker/compose-pjdfstest/: Dockerfile  docker-compose.redis.yml  run_pjdfstest_in_container.sh  run_redis_pjdfstest.sh
docker/compose-xfstests/: Dockerfile  Dockerfile.juicefs-perf  Dockerfile.ltp  Dockerfile.pjdfstest  Dockerfile.stress-ng  docker-compose.etcd-perf.yml  docker-compose.etcd.yml  docker-compose.juicefs-perf.yml  docker-compose.ltp-etcd.yml  docker-compose.ltp-redis.yml  docker-compose.ltp-sqlite.yml  ltp_skip_tests.txt  (+30 more)
examples/: mount-config.local-postgres.yaml  mount-config.local.yaml  mount-config.minimal.yaml  mount-config.perf-tuned.yaml  mount-config.s3-redis.yaml  mount-config.s3.yaml  mount_local.rs  persistence_demo.rs  persistence_s3_demo.rs  s3_demo.rs  sdk_demo.rs  sdk_fs_demo.rs
fuzz/: Cargo.toml
operator/brewfs-operator/: Cargo.toml  Dockerfile  README.md
operator/brewfs-operator/docs/: README.md  architecture.md  brewfscluster.md  brewfsmount.md  workflows.md
operator/brewfs-operator/manifests/: crd.yaml  deployment.yaml  namespace.yaml  rbac.yaml
operator/brewfs-operator/overlays/kubernetes/: cluster.yaml  kustomization.yaml
operator/brewfs-operator/overlays/minikube/: cluster.yaml  mount.yaml
operator/brewfs-operator/src/: crd.rs  main.rs  reconciler.rs
scripts/: cache_demo.sh  install_brewfs_single_node.sh
src/: config.rs  fs.rs  lib.rs  main.rs  sdk_fs.rs
tests/: compaction_perf_test.rs  compaction_worker_test.rs  compactor_test.rs  gc_compact_e2e_test.rs  gc_test.rs  native_fsstress_redis_rustfs_docker.rs  redis_compact_conflict_test.rs  rename_integration_test.rs  test_brewfs_kvm_integration.rs  test_brewfs_qlean_multinode_smoke.rs
(+161 files in other folders)
