[package]
name = "brewfs"
version = "0.1.0"
edition = "2024"
authors = ["rk8s-dev team"]
description = "High-performance Rust & Layers-aware Distributed Filesystem"
repository = "https://github.com/brewfs/brewfs"
license = "MIT"

[workspace]
members = [
    "tools/stats"
]

default-members = ["."]
resolver = "2"

[workspace.dependencies]
common = { path = "common" }
distribution = { path = "distribution" }
libcni = { path = "libcni" }
libcsi = { path = "libcsi" }
libfuse-fs = { path = "libfuse-fs" }
libnetwork = { path = "libnetwork" }
libscheduler = { path = "libscheduler" }
libvault = { path = "libvault" }
libruntime = { path = "libruntime" }
rkforge = { path = "rkforge" }
rkl = { path = "rkl" }
rks = { path = "rks" }
dagrs-derive = { path = "dagrs-derive", version = "0.5.0" }
quote = "1.0"
proc-macro2 = "1.0"
asyncfuse = { version = "0.0.8", default-features = false }
brewfs = { path = "." }
libcgroups = { version = "0.5.7", default-features = false }
libcontainer = "0.5.7"
tonic-build = "=0.7.2"
anyhow = "1.0.100"
async-recursion = "1.0"
async-std = "1.12"
async-trait = "0.1.89"
as-any = "0.3.1"
arc-swap = "1"
async-fs = "2.1.1"
async-global-executor = "2.4.1"
async-io = "2.3.1"
async-lock = "3.3.0"
async-notify = "0.3.0"
async-process = "2.1.0"
auto_impl = "1.3.0"
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
axum = "0.8.6"
axum-extra = "0.10.3"
base64 = { version = "0.22.1", features = ["alloc"] }
bcrypt = "0.17.1"
better_default = "1.0.5"
bincode = "1.3.3"
bitflags = { version = "2.4", features = ["serde"] }
blake2b_simd = "1.0"
blake3 = "1.8"
builder-pattern = "0.4.2"
bytes = "1.10.1"
object_store = { version = "0.13", features = ["aws"] }
caps = "0.5.5"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive"] }
cni-plugin = "0.2.1"
comfy-table = "7.2.1"
confy = "1.0.0"
context = "3.0.0"
crc32c = "0.6"
crossbeam-channel = "0.5"
daemonize = "0.5.0"
dashmap = "6.1.0"
derivative = "2.2.0"
derive_more = "0.99.17"
dirs = "6.0.0"
dockerfile-parser = "0.9.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
either = "1.9.0"
env_logger = "0.11.8"
envsubst = "0.2.1"
enum-map = "2.6.1"
errno = "0.3.11"
etcd-client = { version = "0.17", features = ["tls"] }
fastrand = "2.3.0"
fixedbitset = "0.5.7"
flate2 = { version = "1.1.4", features = ["zlib-rs"], default-features = false }
foreign-types = "0.3.1"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
gethostname = "0.4.3"
glob = "0.3.1"
go-defer = "0.1.0"
hcl-rs = "0.18.0"
hex = "0.4.3"
hickory-proto = "0.25.2"
hickory-resolver = "0.25.2"
hickory-server = "0.25.2"
hickory-client = "0.25.2"
http = "1.3.1"
http-body = "0.4.5"
http-body-util = "0.1.0"
humantime = "2.1.0"
hyper = "0.14.27"
idgenerator = "0.2.0"
indicatif = "0.18.0"
infer = "0.19.0"
ipc-channel = "0.20.1"
ipnetwork = "0.17.0"
iptables = "0.6.0"
itertools = "0.14.0"
iterator-ext = "0.2.1"
json = "0.12.4"
jsonwebtoken = "9.3.1"
k8s-openapi = { version = "0.23", features = ["v1_30"] }
kube = { version = "0.96", features = ["client", "rustls-tls"] }
lazy_static = "1.5.0"
libbpf-sys = "1.5.0"
libc = "0.2.175"
libloading = "0.8.9"
liboci-cli = "0.5.1"
libseccomp = "0.3.0"
lockfile = "0.4.0"
log = "0.4.28"
macaddr = "1.0.1"
md5 = "0.7.0"
memmap2 = "0.9.7"
moka = "0.12.11"
native-tls = "0.2.14"
nc = "0.9.6"
netlink-packet-route = "0.25.1"
nftables = "0.6.3"
nix = "0.29.0"
oci-client = "0.15.0"
oci-spec = "0.8.1"
once_cell = "1.21.3"
openssl = "0.10.73"
openssl-sys = "0.9.109"
pem = "3.0.0"
pgp = "0.19.0"
priority-queue = "2.1.0"
prctl = "1.0.0"
procfs = "0.17.0"
protobuf = "=3.2.0"
prost = "0.13.5"
prost-types = "0.12.6"
qrcode = "0.14.1"
quinn = "0.11.9"
radix_trie = "0.2.1"
rand = "0.9.0"
rand_chacha = "0.3.1"
rayon = "1.11.0"
rbpf = "0.3.0"
rcgen = "0.12.1"
regex = "1.12.2"
reqwest = "0.12.24"
ring = "0.17.14"
rtnetlink = "0.18.1"
rust-criu = "0.4.0"
rustls = "0.23.16"
rustls-pemfile = "2.1.0"
rustls-webpki = "0.103.7"
safe-path = "0.1.0"
sea-orm = "1.1.17"
sea-orm-migration = "1.1.17"
secp256k1 = "0.30.0"
semver = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.14"
serde_derive = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.8.0"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
sha256 = "1.6.0"
slab = "0.4.9"
smallvec = "1.15.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros", "migrate", "chrono", "uuid"] }
stretto = "0.8.0"
strum = "0.25.0"
strum_macros = "0.25.0"
syn = "2.0.0"
sysinfo = "0.30.0"
tabwriter = "1.4.1"
tar = "0.4.44"
tempfile = "3.20.0"
thiserror = "2.0.17"
time = "0.3.0"
tokio = { version = "1.48.0", features = ["full"] }
io-uring = "0.7"
tokio-stream = "0.1.17"
tokio-util = "0.7.18"
toml = "0.8.19"
aligned_box = "0.3.0"
tikv-jemallocator = "0.5.4"
tikv-client = { version = "0.4.0", default-features = false }
tonic = "0.14.2"
tower = "0.5.2"
tower-http = "0.6.6"
tower-sessions = { version = "0.12.3", features = ["memory-store"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
tracing-journald = "0.3.1"
tracing-subscriber = "0.3.20"
tracing-chrome = "0.7.2"
tracing-flame = "0.2.0"
console-subscriber = "0.5.0"
trait-make = "0.1.0"
typetag = "0.2.20"
ureq = "2.10.0"
url = "2.5.7"
uzers = "0.12.1"
uuid = { version = "1.18.1", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
vm-memory = "0.16.1"
vmm-sys-util = "0.12.1"
walkdir = "2.5.0"
webpki-roots = "0.26.3"
which = "4.4.2"
x509-parser = "0.18.0"
lru = "0.16"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
quickcheck = "1.0.3"
mockall = "0.13.1"
scopeguard = "1.2.0"
serial_test = "3.2.0"
prost-build = "0.13.5"
hostname = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
if-addrs = "0.6.0"
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
parking_lot = "0.12.5"
qlean = "0.2.2"
rkyv = "0.8.14"
proptest = "1.10.0"
ssh-key = { version = "0.6.7", features = ["std", "crypto"] }
lz4_flex = "0.11"
zstd = "0.13"
governor = "0.8"

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "time", "net", "signal", "tracing"] }
async-trait = { workspace = true }
async-recursion = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true, features = ["behavior-version-latest"] }
base64 = { workspace = true }
md5 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
bytes = { workspace = true }
crc32c = { workspace = true }
hex = { workspace = true }
tokio-util = { workspace = true }
moka = { workspace = true, features = ["future"] }
dashmap = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hyper = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
anyhow = { workspace = true }
env_logger = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
asyncfuse = { workspace = true, features = ["file-lock", "unprivileged"] }
etcd-client = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
auto_impl = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tracing-flame = { workspace = true, optional = true }
tracing-chrome = { workspace = true, optional = true }
console-subscriber = { workspace = true, optional = true }
dotenv = { workspace = true }
rand = { workspace = true }
hostname = { workspace = true }
bitflags = { workspace = true }
redis = { workspace = true }
if-addrs = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
parking_lot = { workspace = true }
tikv-jemallocator = { workspace = true, optional = true }
tikv-client = { workspace = true }
rkyv = { workspace = true, optional = true, features = ["uuid-1"] }
lz4_flex = { workspace = true }
zstd = { workspace = true }
governor = { workspace = true }

[features]
default = ["fuse-io-uring-runtime"]
fuse-io-uring-runtime = ["asyncfuse/io-uring-runtime"]
fuse-tokio-runtime = ["asyncfuse/tokio-runtime"]
profiling = ["dep:tracing-flame", "dep:tracing-chrome", "dep:console-subscriber"]
jemalloc = ["dep:tikv-jemallocator"]
jemalloc-profiling = ["jemalloc", "tikv-jemallocator/profiling"]
rkyv-serialization = ["dep:rkyv"]

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
pprof = { workspace = true }
serial_test = { workspace = true }
qlean = { workspace = true }
tracing-chrome = { workspace = true }
tower = { workspace = true, features = ["util"] }

[[bench]]
name = "brewfs_bench"
harness = false

[profile.release]
debug = true
strip = false
