[package]
name = "brewfs-operator"
version = "0.1.0"
edition = "2021"
authors = ["rk8s-dev team"]
description = "Independent Kubernetes operator for BrewFS"
license = "MIT"

[workspace]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
k8s-openapi = { version = "0.23", features = ["v1_30"] }
kube = { version = "0.96", features = ["client", "derive", "runtime", "rustls-tls"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
